# django-crud

./: README.md
django_crud/: db.sqlite3  pyproject.toml
django_crud/movies/: models.py  tests.py  urls.py  views.py
django_crud/movies/migrations/: 0001_initial.py
django_crud/movies_project/: settings.py  urls.py
django_crud/templates/: add.html  base.html  delete.html  details.html  home.html  update.html
